<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">DrinkLink</string>
    <string name="error_api_network">Network error</string>
    <string name="btn_order">PROCEED TO PAYMENT\n(Time to collect order: %d min)</string>
    <string name="btn_reset">reset order</string>
    <string name="lbl_summary">Summary</string>
    <string name="btn_at_bar">Pickup at bar</string>
    <string name="btn_to_table">Deliver to table</string>
    <string name="btn_add_tip">Add tip</string>
    <string name="btn_pay">Payment</string>
    <string name="lbl_favorite_cards">Pay with favorite credit card</string>
    <string name="hint_name_on_card">Name on card</string>
    <string name="hint_card_number">Card number</string>
    <string name="hint_expiry">Expiry</string>
    <string name="hint_ccv">CCV code</string>
    <string name="lbl_remember">Remember</string>
    <string name="error_an_error">An error occurred</string>
    <string name="error_ok_to_retry">Do you want to retry?</string>
    <string name="header_search">Home</string>
    <string name="header_search_description">Choose featured places or search</string>
    <string name="input_search_placeholder">Enter name, area or address</string>
    <string name="search_button">Search</string>
    <string name="settings">Settings</string>
    <string name="search_results_more">%s results</string>
    <string name="search_results_1">1 result</string>
    <string name="search_results_0">No results</string>
    <string name="place_open_hours">Working hours %1$s - %2$s</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="order_amount_format">%.2f</string>
    <string name="order_amount_format_no_currency">%.2f</string>
    <string name="order_amount_format_unit">%.2f</string>
    <string name="order_your">View order</string>
    <string name="order_items_format">(%1$d)</string>
    <string name="payment">payment</string>
    <string name="order_summary_payment_format">Order (%1$d item%2$s):</string>
    <string name="order_total">total:</string>
    <string name="pay_now">pay now</string>
    <string name="percentage_text_format">%1$s %2$.0f%%</string>
    <string name="percentage_tip_text_format">Tip %d%%</string>
    <string name="credit_card_holder">Card Holder</string>
    <string name="credit_card_valid_until">Valid Until</string>
    <string name="bill_to_email_optional">Send bill to email</string>
    <string name="bill_to_email">Send bill to email</string>
    <string name="credit_card_ccv_code">CVC Code</string>
    <string name="credit_card_no">Card No</string>
    <string name="code_placeholder">Code will appear here</string>
    <string name="btn_click_at_collection_point">VIEW ORDER\n\(Click at collection point)</string>
    <string name="time_to_collect">time left to collect</string>
    <string name="state_item_on_hold_format">On hold - Your Order is number %d in the queue</string>
    <string name="state_item_on_hold_accepted">Order on hold</string>
    <string name="state_item_order_accepted">Order accepted</string>
    <string name="state_item_order_rejected">Order rejected</string>
    <string name="state_item_order_payment_failed">Order rejected by bank</string>
    <string name="state_item_order_canceled">Order canceled</string>
    <string name="state_item_order_rejected_message">Rejected by %1$s: %2$s</string>
    <string name="state_item_payment_processed">Payment Processed</string>
    <string name="state_item_preparing_order">Preparing Order</string>
    <string name="state_item_collect_order">Collect Order</string>
    <string name="btn_cancel">Cancel</string>
    <string name="drink_count_format">%02d</string>
    <string name="btn_add_drink">add</string>
    <string name="switch_at_bar">PICK UP</string>
    <string name="switch_at_table">DINE-IN</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_format">Settings v1.0.%d</string>
    <string name="menu_sign_in">Sign In / Register</string>
    <string name="order_order">Order</string>
    <string name="order_time_to_collect">Time left to Collect:</string>
    <string name="order_time_collect_before">Collect before:</string>
    <string name="order_time_created">Created:</string>
    <string name="order_table_delivery">Table delivery</string>
    <string name="order_pickup_label">Pick Up:</string>
    <string name="order_pickup_format">Pick Up: %1$s</string>
    <string name="order_items_count_format">(%d items):</string>
    <string name="order_item_count_format">(%d item):</string>
    <string name="btn_back_to_order">Back to order</string>
    <string name="payment_ask_table_number">Ask server for your table number</string>
    <string name="choose_table">Choose Table</string>
    <string name="btn_select">Select</string>
    <string name="dialog_title_select_table">Select table</string>
    <string name="select_tip">Tip</string>
    <string name="dialog_title_select_tip">Add Tip</string>
    <string name="dialog_spinner_no_selection_format">No %1$s</string>
    <string name="dialog_title_select_discount">Select Discount</string>
    <string name="dialog_title_discount_info">Discount Card</string>
    <string name="dialog_message_select_discount">You WILL NOT receive your Order unless you PRESENT valid DISCOUNT CARD</string>
    <string name="select_discount">Discount</string>
    <string name="option_add_ice">Add Ice</string>
    <string name="option_add_mix">Add Mix</string>
    <string name="option_with_ice">Ice</string>
    <string name="option_with_mixer">With Mix</string>
    <string name="message_add_mix">Select %1$s</string>
    <string name="code_and_status_code">code:</string>
    <string name="code_and_status_present_code">You MUST present your discount card to receive your order</string>
    <string name="status_time_to_collect">time left to collect</string>
    <string name="status_prepared_by">Prepared by: %1$s</string>
    <string name="code_header_format">CODE: %1$s</string>
    <string name="bar_is_closed">Bar is closed</string>
    <string name="need_to_present_discount">You must present valid DISCOUNT CARD when collecting order!</string>
    <string name="need_discount_table">You must present valid DISCOUNT CARD when order arrives!</string>
    <string name="btn_additional_info">i</string>
    <string name="btn_ok">ok</string>
    <string name="customize_settings">Customize DrinkLink</string>
    <string name="settings_your_cards">My Cards</string>
    <string name="btn_add_new_card">Add new card</string>
    <string name="settings_default_message_sound">Default Message Sound</string>
    <string name="settings_default_ring_for_ready">Default Ring For Order Ready</string>
    <string name="settings_default_message_sound_desc">Default Message Sound for each Order Status Change</string>
    <string name="settings_button_apply">Apply settings</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="sign_in_header">Sign in</string>
    <string name="sign_in_description">Enjoy DrinkLink Our Old Friend</string>
    <string name="button_sign_in">Sign In</string>
    <string name="sign_in_instructions">Enter your credentials and start using app.</string>
    <string name="sign_in_mail">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot_password"><u>Forgot password?</u></string>
    <string name="your_orders_header">View order</string>
    <string name="your_orders_description">Orders History</string>
    <string name="order_by_status">Status</string>
    <string name="order_by_date">Date</string>
    <string name="order_by_place">Place</string>
    <string name="dialog_title_select_ordering">Sort by</string>
    <string name="button_repeat_order">Repeat order</string>
    <string name="button_refund_order">Refund order</string>
    <string name="button_view_order">View order</string>
    <string name="order_status_label">Status:</string>
    <string name="order_state_created">Created</string>
    <string name="order_state_pending">Pending</string>
    <string name="order_state_on_hold">On hold</string>
    <string name="order_state_preparing">Preparing</string>
    <string name="order_state_notif_preparing">being prepared</string>
    <string name="order_state_accepted">Accepted</string>
    <string name="order_state_completed">Completed</string>
    <string name="order_state_collected">Collected</string>
    <string name="order_state_delivered">Delivered</string>
    <string name="order_state_ready">Ready</string>
    <string name="order_state_rejected">Rejected by Place</string>
    <string name="order_state_payment_failed">Rejected by Bank</string>
    <string name="order_state_failed">Failed</string>
    <string name="order_state_canceled">Canceled</string>
    <string name="order_state_not_collected">Not collected</string>
    <string name="button_delete_order">Delete</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="delete_order_title">Delete order</string>
    <string name="delete_order_message">Are you sure you want to delete order from history?</string>
    <string name="btn_close">Close</string>
    <string name="delete_order_pending">Cannot delete uncompleted order.</string>
    <string name="vip_charge_label">Add VIP charge and advance your Order</string>
    <string name="vip_charge_button_format">VIP Charge %.0f AED</string>
    <string name="vip_info_title">VIP charge</string>
    <string name="vip_info_text">VIP charge takes your ORDER on TOP of all regular orders and behind existing VIP orders</string>
    <string name="service_charge_label">Service Charge</string>
    <string name="sign_in_new_user"><u>NEW USER</u></string>
    <string name="button_sign_up">Register</string>
    <string name="sign_up_header">Register</string>
    <string name="sign_up_description">Welcome to DrinkLink</string>
    <string name="sign_in_password_confirm">Confirm password</string>
    <string name="sign_up_instructions">Only registered users can have their card details saved.</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="dialog_header_sign_out">Sign Out</string>
    <string name="dialog_description_sign_out">Are you sure you want to Sign Out?</string>
    <string name="msg_token_fmt">fm %1$s</string>
    <string name="drink_link_notification">DrinkLink update</string>
    <string name="notifications_channel_name">DrinkLink notifications</string>
    <string name="notifications_channel_description">DrinkLink notifications</string>
    <string name="notifications_channel_id">DrinkLinkNotifications_ChannelId_20211121</string>
    <string name="notifications_ring_channel_id">DrinkLinkNotifications_ring_ChannelId_20211121</string>
    <string name="notifications_silent_channel_id">DrinkLinkNotifications_silent_ChannelId_20211121</string>
    <string name="fcm_message">FCM message</string>
    <string name="alert_order_ready">Order is ready</string>
    <string name="alert_minute_left">Order is ready to collect</string>
    <string name="alert_table_order_ready">Order is ready and will be delivered</string>
    <string name="paytabs_transaction_title">Order #%d</string>
    <string name="terms_and_conditions_title">Terms of Service</string>
    <string name="terms_and_conditions_message">I have read and agree to <a href="https://drinklink.ae/wp-content/uploads/2019/10/Terms-of-Service-DrinkLink.pdf">Terms of Service</a></string>
    <string name="aed">AED</string>
    <string name="upload_logs">Upload logs</string>
    <string name="most_recent_orders">Most recent orders:</string>
</resources>