<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) All rights reserved DrinkLink
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button android:id="@+id/btn_saved_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="label"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_name_on_card"
        style="@style/EditText.CreditCard"
        android:hint="@string/hint_name_on_card"/>

    <EditText
        android:id="@+id/et_card_number"
        style="@style/EditText.CreditCard"
        android:hint="@string/hint_card_number"/>

    <EditText
        android:id="@+id/et_expiry"
        style="@style/EditText.CreditCard"
        android:hint="@string/hint_expiry"/>

    <EditText
        android:id="@+id/et_ccv"
        style="@style/EditText.CreditCard"
        android:hint="@string/hint_ccv"
        />

    <CheckBox android:id="@+id/cb_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_remember"/>

</LinearLayout>