<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) All rights reserved DrinkLink
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <Button
        android:id="@+id/btn_at_bar"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/btn_at_bar"/>

    <Button
        android:id="@+id/btn_to_table"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_to_table"/>

    <Button
        android:id="@+id/btn_add_tip"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_tip"/>

</LinearLayout>
