<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) All rights reserved DrinkLink 
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingTop="@dimen/default_margin_2x">


    <LinearLayout
        android:id="@+id/menu_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_home"/>

        <TextView
            android:id="@+id/lbl_menu_home"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/menu_home"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_your_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_yourorders"/>

        <TextView
            android:id="@+id/lbl_menu_your_order"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/menu_my_orders"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_settings"/>

        <TextView
            android:id="@+id/lbl_menu_settings"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/menu_settings"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_doublearrow_up"/>

        <TextView
            android:id="@+id/lbl_upload_logs"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/upload_logs"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_doublearrow_up"/>

        <TextView
            android:id="@+id/lbl_terms_and_conditions"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/terms_and_conditions_title"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/image_menu_item_style"
            app:srcCompat="@drawable/ico_logout"/>

        <TextView
            android:id="@+id/lbl_menu_sign_in"
            style="@style/menu_item_white_text_view_style_18sp"
            android:text="@string/menu_sign_in"/>

    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"/>

    <TextView
        android:id="@+id/most_recent_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_2x"
        style="@style/order_description_text_view_style_14sp"
        android:text="@string/most_recent_orders"/>

   <include layout="@layout/navigation_order_item" android:id="@+id/order"/>

   <include layout="@layout/navigation_order_item" android:id="@+id/order2"/>

</LinearLayout>
